--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grace",
+  "name": "firebase",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "firebase": "^7.14.4",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -37,5 +38,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jayneani1/GraceFE2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jayneani1/GraceFE2/issues"
+  },
+  "homepage": "https://github.com/jayneani1/GraceFE2#readme"
 }
